@@ -7,6 +7,6 @@
 .*: +file format elf64-powerpc
 
 Contents of section \.got:
- 10010610 00000000 10018610 ffffffff ffff8018  .*
- 10010620 00000000 00000000 00000000 00000000  .*
- 10010630 00000000 00000000 00000000 00000000  .*
+ 100105f0 00000000 100185f0 ffffffff ffff8018  .*
+ 10010600 00000000 00000000 00000000 00000000  .*
+ 10010610 00000000 00000000 00000000 00000000  .*
