@@ -7,9 +7,9 @@
 .*: +file format elf64-powerpc
 
 Contents of section \.got:
- 10010598 00000000 10018598 00000000 00000000  .*
- 100105a8 00000000 00000000 00000000 00000000  .*
- 100105b8 00000000 00000000 00000000 00000001  .*
- 100105c8 00000000 00000000 00000000 00000001  .*
- 100105d8 00000000 00000000 ffffffff ffff8050  .*
- 100105e8 00000000 00000000                    .*
+ 10010580 00000000 10018580 00000000 00000000  .*
+ 10010590 00000000 00000000 00000000 00000000  .*
+ 100105a0 00000000 00000000 00000000 00000001  .*
+ 100105b0 00000000 00000000 00000000 00000001  .*
+ 100105c0 00000000 00000000 ffffffff ffff8050  .*
+ 100105d0 00000000 00000000                    .*
