@@ -1,3 +1,10 @@
+2005-03-05  Alan Modra  <amodra@bigpond.net.au>
+
+	* ld-powerpc/tlsexe.g: Update.
+	* ld-powerpc/tlsexe.r: Update.
+	* ld-powerpc/tlsexetoc.g: Update.
+	* ld-powerpc/tlsexetoc.r: Update.
+
 2005-03-04  David Daney  <ddaney@avtrex.com>
 
 	* ld-mips-elf/multi-got-no-shared-1.s,
